# az_databricks_stock_data_pipeline

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md  requirements.txt
data/new_data/AAPL/: AAPL_historical_data_2022-01-01_to_2025-06-01.csv  AAPL_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/ABT/: ABT_historical_data_2022-01-01_to_2025-06-01.csv  ABT_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/ADBE/: ADBE_historical_data_2022-01-01_to_2025-06-01.csv  ADBE_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/AMD/: AMD_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/AMGN/: AMGN_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/AMZN/: AMZN_historical_data_2022-01-01_to_2025-06-01.csv  AMZN_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/AVGO/: AVGO_historical_data_2022-01-01_to_2025-06-01.csv  AVGO_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/AXP/: AXP_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/BAC/: BAC_historical_data_2025-06-02_to_2025-09-01.csv
data/new_data/BKNG/: BKNG_historical_data_2022-01-01_to_2025-06-01.csv  BKNG_historical_data_2025-06-02_to_2025-09-01.csv
data/pre-test/AMD/: AMD_historical_data_2022-01-01_to_2025-06-01.csv
docs/: DATABRICKS_BUNDLE.md  PROJECT_WALKTHROUGH.md  TERRAFORM_SETUP.md
stock_bundles/: databricks.yml  pyproject.toml
stock_bundles/resources/: bronze.ingestion.yml  gold.pipeline.yml  silver.pipeline.yml  workspace.config.yml
stock_bundles/src/notebook/: Setup.ipynb  (+3 more)
terraform/: main.tf  variables.tf
(+7 files in other folders)
