[project]
name = "data-streaming"
version = "0.1.0"
description = "Why I'm I doing this?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.26.0",
    "azure-storage-file-datalake>=12.21.0",
    "databricks>=0.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "jq>=1.10.0",
]
